# pytest-runtime-xfail

./: README.md  pyproject.toml  pytest_runtime_xfail.py  pytest_runtimexfail.py  tox.ini
example/: test_xfail.py
tests/: test_runtime_xfail.py
