[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "pytest-runtime-xfail"
module = "pytest_runtime_xfail"
author = "Brian Okken"
author-email = "brian+pypi@pythontest.com"
home-page = "https://github.com/okken/pytest-runtime-xfail"
requires = ["pytest>=5.0.0"]
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python=">=3.7"

[tool.flit.entrypoints."pytest11"]
runtime-xfail = "pytest_runtime_xfail"
